--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,38 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
 
 
 body {
   color: rgb(var(--foreground-rgb));
   background: whitesmoke;
+}
+
+.link-svgline {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  overflow: hidden;
+  margin: 0;
+  width: 100%;
+  height: 20px; 
+  transition: stroke-dashoffset 0.3s ease-in-out;
+  transform: translateY(-90%);
+  fill: none;
+  stroke: #b1d474;
+  stroke-width: 5;
+  stroke-dasharray: 400px; 
+  stroke-dashoffset: 400px;
+}
+.mfont{
+  font-family: 'Pacifico', cursive;
+
+}
+.cvb{
+  background-image: linear-gradient(181deg, #ffa620 0%, #fba11a 50%, transparent 54%, transparent 100%);
+  background-size: 100% 15%;
+  background-repeat: repeat-x;
+  background-position: left 15% bottom -3%;
 }
