--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@500&display=swap');
 
 
 body {
@@ -35,4 +35,12 @@ body {
   background-size: 100% 15%;
   background-repeat: repeat-x;
   background-position: left 15% bottom -3%;
+}
+.stl{
+  font-family: 'Caveat', cursive;
+}
+@media screen and  (max-width: 500px) {
+  .scrollh{
+   width: 800px;
+}
 }
